--- a/ConsimpleWeb/appsettings.json
+++ b/ConsimpleWeb/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "MasterConnection": "Host=localhost;Port=5432;Database=consimple;Username=postgres;Password=your_password"
+    "MasterConnection": "Host=localhost;Port=5432;Database=consimple;Username=postgres;Password=test"
   },
   "AllowedHosts": "*"
 }
